--- a/B - D 20.html
+++ b/B - D 20.html
@@ -83,7 +83,7 @@
 				<div class="w3-cell w3-mobile" style="padding-right:5"></div>
 				<!--  DEBUT Projet principale 2 -->
 				<div class="w3-cell w3-mobile w3-container">				
-					<img class="zoom" src="images\Mes Projets\B - D 20\image2.jpg" onclick="onClick(this)" style="width:100%; cursor:pointer">
+					<img class="zoom" src="images\Mes Projets\B - D 20\image2.PNG" onclick="onClick(this)" style="width:100%; cursor:pointer">
 				</div>
 				<!--  FIN Projet principale 2 -->
 			</div>
