--- a/ArduiTank.html
+++ b/ArduiTank.html
@@ -86,7 +86,7 @@
 				<div class="w3-cell w3-mobile" style="padding-right:5"></div>
 				<!--  DEBUT Projet principale 2 -->
 				<div class="w3-cell w3-mobile w3-container">				
-					<img class="zoom" src="images\Mes Projets\ArduiTank\image2.jpg" onclick="onClick(this)" style="width:100%; cursor:pointer">
+					<img class="zoom" src="images\Mes Projets\ArduiTank\image2.JPG" onclick="onClick(this)" style="width:100%; cursor:pointer">
 				</div>
 				<!--  FIN Projet principale 2 -->
 			</div>
@@ -94,14 +94,14 @@
 			<div class="w3-cell-row w3-content" style="width:100%">
 				<!--  DEBUT Projet principale 3 -->
 				<div class="w3-cell w3-mobile w3-container">					
-					<img class="zoom" src="images\Mes Projets\ArduiTank\image3.jpg" onclick="onClick(this)" style="width:100%; cursor:pointer">
+					<img class="zoom" src="images\Mes Projets\ArduiTank\image3.JPG" onclick="onClick(this)" style="width:100%; cursor:pointer">
 				</div>
 				<!--  FIN Projet principale 3 -->
 				<div class="w3-cell w3-mobile" style="padding-bottom:32"></div>
 				<div class="w3-cell w3-mobile" style="padding-right:5"></div>
 				<!--  DEBUT Projet principale 4 -->
 				<div class="w3-cell w3-mobile w3-container">
-					<img class="zoom" src="images\Mes Projets\ArduiTank\image4.jpg" onclick="onClick(this)"  style="width:100%; cursor:pointer">
+					<img class="zoom" src="images\Mes Projets\ArduiTank\image4.JPG" onclick="onClick(this)"  style="width:100%; cursor:pointer">
 				</div>
 				<!--  FIN Projet principale 4 -->
 					
