--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					métaux, fraiseuses, CNC, Imprimante 
 					3D, …), très créatif. 
 					</p>
-					<a href="documents/cv.pdf" download="DI VENTI Davide - CV">
+					<a href="documents/CV.pdf" download="DI VENTI Davide - CV">
 						<button class="w3-button w3-white w3-border" style = "font-size: 130%;">Curiculum Vitae</button>
 					</a>
 				</div>
