--- a/Pont Pegasus.html
+++ b/Pont Pegasus.html
@@ -163,7 +163,7 @@
 				<!--  FIN Réseaux -->		
 				<!--  DEBUT CV -->
 				<div class="w3-cell w3-mobile w3-container w3-center " >
-					<a href="documents/cv.pdf" download="DI VENTI Davide - CV">
+					<a href="documents/CV.pdf" download="DI VENTI Davide - CV">
 						<button class="w3-button w3-border " style = "font-size: 130%; background-color: #ececec; ">Curiculum Vitae</button>
 					</a>
 					<div class="w3-cell w3-mobile" style="padding-bottom:32"></div>
