--- a/STIB.html
+++ b/STIB.html
@@ -118,7 +118,11 @@
 					<div class="w3-cell w3-mobile" style="padding-bottom:32"></div>
 				</div>
 				<!--  FIN CV -->
-			</div>    			
+			</div> 
+			<p style = "font-size: 100%; text-align: center">
+			© 2022 idées de conception du Portfolio par <a href="https://www.behance.net/Chloe-Delamarre/" >Chloé</a> & <a href="https://adrianodiventi.wixsite.com/portfolio/" >Adriano</a><br>
+			© 2022 programmé par <a href="https://davidediventi.github.io/Portfolio/" >Davide</a>
+			</p>
 		</footer>
 		
 		<footer class="w3-container w3-text-white w3-bar " style="background-color: #0c0c0c; font-size: 150%">
