added the copyright text

--- a/AdventureWorld V2.html
+++ b/AdventureWorld V2.html
@@ -171,7 +171,11 @@
 					<div class="w3-cell w3-mobile" style="padding-bottom:32"></div>
 				</div>
 				<!--  FIN CV -->
-			</div>    			
+			</div>  
+			<p style = "font-size: 100%; text-align: center">
+			© 2022 idées de conception du Portfolio par <a href="https://www.behance.net/Chloe-Delamarre/" >Chloé</a> & <a href="https://adrianodiventi.wixsite.com/portfolio/" >Adriano</a><br>
+			© 2022 programmé par <a href="https://davidediventi.github.io/Portfolio/" >Davide</a>
+			</p>
 		</footer>
 		
 
