added the text of my future studies

--- a/Industry 4.0 prototyping Boards.html
+++ b/Industry 4.0 prototyping Boards.html
@@ -75,6 +75,14 @@
 					l’accès aux données depuis des serveurs, et les interfaces utilisateurs (Dashboards) seront les différentes approches 
 					étudiées lors des cours d’électronique et informatique des 3e bacheliers en automatisation.
 					</p>
+					<p style = "font-size: 130%; text-align: justify">	
+					Je suis satisfait du projet que j’ai mené tout au long de mon stage. Les différentes approches que j’ai réalisées m’ont 
+					permis d’acquérir un certain niveau de maturité dans le domaine. Avec un maître électronicien à mes côtés, j’ai 
+					pu développer et surpasser mes anciennes méthodes de travail. Après tous les efforts que j’ai effectués dans ce 
+					projet, je ne me suis malgré tout pas encore saturé. C’est pourquoi je pense être capable de poursuivre mes études 
+					dans ce domaine, en électronique. Certains aspects ne me font plus peur, je me sens plus confiant. Je voyais initialement ce stage 
+					comme une préparation à la poursuite de mes études, et je ne suis pas déçu, loin de là.
+					</p>
 					<a href="https://github.com/DavideDiVenti/TFE-3AU-2022" download="DI VENTI Davide - CV" >
 						<button class="w3-button w3-white w3-border " style = "font-size: 130%;">Dépôt GitHub du TFE</button>
 					</a>
