linkedin url added

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 			<!-- <a><img src="gif/white-arrow.gif" ></a> -->
 			<a href="https://github.com" target="_blank" class="fa fa-github w3-hover-text-grey"></a>
 			<a href="https://facebook.com" target="_blank" class="fa fa-facebook w3-hover-text-grey"></a>
-			<a href="https://linkedin.com" target="_blank" class="fa fa-linkedin w3-hover-text-grey"></a>
+			<a href="https://www.linkedin.com/in/davide-di-venti-a23328333" target="_blank" class="fa fa-linkedin w3-hover-text-grey"></a>
 		</div>
     </div>
 	<br><br><br>
